# ChangeLog for mail-client/mutt
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.122 2008/08/23 01:43:01 cardoe Exp $

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  09 Mar 2008; <ricmm@gentoo.org> mutt-1.5.11-r2.ebuild,
  mutt-1.5.13-r1.ebuild, mutt-1.5.16.ebuild:
  Marked unstable on mips due to unstable deps

  29 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing agriffis from metadata due to his retirement (see #182294 for
  reference).

  23 Aug 2007; Joshua Kinard <kumba@gentoo.org> mutt-1.5.16.ebuild:
  Stable on mips, per #178003.

  16 Aug 2007; Fernando J. Pereda <ferdy@gentoo.org>
  files/mutt-1.5.16-parallel-make.patch, mutt-1.5.16.ebuild:
  Hopefully fix parallel make for every USE combination

  11 Aug 2007; Steve Dibb <beandog@gentoo.org> mutt-1.5.16.ebuild:
  amd64 stable, security bug 178003

  10 Aug 2007; Markus Rothe <corsair@gentoo.org> mutt-1.5.16.ebuild:
  Stable on ppc64; bug #178003

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> mutt-1.5.16.ebuild:
  Stable on sparc wrt security #178003

  09 Aug 2007; Raúl Porcel <armin76@gentoo.org> mutt-1.5.16.ebuild:
  alpha/ia64 stable wrt security #178003

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> mutt-1.5.16.ebuild:
  ppc stable, bug #178003

  09 Aug 2007; Fernando J. Pereda <ferdy@gentoo.org> mutt-1.5.16.ebuild:
  The nntp patch was faulty. Bumping patchset to -r1, no revbump to avoid
  silly recompiles.

  09 Aug 2007; Christian Faulhammer <opfer@gentoo.org> mutt-1.5.16.ebuild:
  stable x86, security bug 178003

  09 Aug 2007; Jeroen Roovers <jer@gentoo.org> mutt-1.5.16.ebuild:
  Stable for HPPA (bug #178003).

  08 Aug 2007; Fernando J. Pereda <ferdy@gentoo.org>
  +files/mutt-1.5.16-parallel-make.patch:
  Add mutt-1.5.16-parallel-make, oooops.

*mutt-1.5.16 (08 Aug 2007)
