@@ -29,6 +29,6 @@ DIST patch-1.5.18.vvv.nntp.gz 55263 RMD160 88cd710262886e1440f0ed2b6c8cb0f245d79
 EBUILD mutt-1.5.16.ebuild 5833 RMD160 4f73650943c5ba65885c9454be16faf57e80a2a3 SHA1 54beedf8361b0b95baa47a76091a280ea0a9731d SHA256 8184bd7a31be41e49166e7fa903ca8f27c7ddaf064fec3f8945d3f0af4398e19
 EBUILD mutt-1.5.17.ebuild 5945 RMD160 68e8a8bd75a7b8a618fbc43e067243c07f93ab14 SHA1 43e25614accef8d5d8c5dd4702e41ea2b01226c5 SHA256 f6255bf0b06daf98a7f552abf217ae6811b2edf6661864d1749cdc0838dfbb94
 EBUILD mutt-1.5.18.ebuild 6517 RMD160 aa776ac69341ebac2cd9081547bd5aa991105851 SHA1 8d2a30f7dcf51a66ef7fa72c19c56dc889a2c249 SHA256 9e4111e61c55c8478b432ca814f7ff2e3291610b80600efca5b3597dc892c30a
-EBUILD mutt-1.5.19.ebuild 6360 RMD160 8eeb6603ea2485228edf27b43221fe6bf1a58152 SHA1 7a581b50713b07a080ee8ea59797a5996169af62 SHA256 b6dffb9c9e7faf035e8de745f333ce9573112dc14c78d7afe219f7e86c80e28e
-MISC ChangeLog 27593 RMD160 007c6e86e962e1afcfac1c06e2ea6dc7cf9e0087 SHA1 da4f776150d65aab0d210bccf86dd9cc984cef33 SHA256 104cb12c63ce2d187ec7ba6e24de8c3032ba5e64151302c0530bcc987399e19d
+EBUILD mutt-1.5.19.ebuild 6217 RMD160 fa86b1855f7f6752f3e53517103dca94c0b71c50 SHA1 9d502f877be0fa35b40ddaa347f98ddeed5d1b30 SHA256 a3a54797e4b75a8834463292b86e4eb09cb2bfc6f5289f05e985e098fc544b8b
+MISC ChangeLog 27964 RMD160 0fd9065ddec24b98e37e4db681dce2e42c16ca80 SHA1 f04d58fec5885c22825682d1e99372d446bb1b0b SHA256 5fba01af467ba957d83915856d53c2dd36e1780fd6a1a11e402d8bda3be22a05
 MISC metadata.xml 647 RMD160 1086c89914f6570115977578df14c0870401e0a0 SHA1 a1a497a1e4985546ad2e82dd7ab19df6e98aa225 SHA256 2a016fb1d2d9836d2370d5f958801506db1476361eba3232638fcf015a6950e4
